tests/snapshots/test_runner__tests__compiler__typecheck__single_dispatch_4.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo = (s: String): String => "Hello"

let foo = (i: Integer): String => "World"

true.foo().print()
//      ^^^^^ Error: no matching overloaded function found

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/single_dispatch_4.kk:5:6
  │
5 │ true.foo().print()
  │      ^^^ No matching overload found.
  │
  =
    I cannot find a version of this function that takes the following type as first argument:

        Boolean

    But I found other versions of this function that take any of the following type as first argument:

        String

        Integer
